[gd_scene load_steps=2 format=3 uid="uid://w1jecibb6344"]

[ext_resource type="Script" path="res://menus/character_selection.gd" id="1_colvg"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_colvg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.357
anchor_top = 0.357
anchor_right = 0.635
anchor_bottom = 0.635
offset_left = -0.440002
offset_top = -0.440002
offset_right = -0.200012
offset_bottom = -0.199951
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Play as Cat" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Back")
focus_neighbor_top = NodePath("../Back")
focus_neighbor_right = NodePath("../Play as Link")
focus_neighbor_bottom = NodePath("../Play as Link")
focus_next = NodePath("../Play as Link")
focus_previous = NodePath("../Back")
text = "Play as Cat"
icon_alignment = 1

[node name="Play as Link" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Play as Cat")
focus_neighbor_top = NodePath("../Play as Cat")
focus_neighbor_right = NodePath("../Back")
focus_neighbor_bottom = NodePath("../Back")
focus_next = NodePath("../Back")
focus_previous = NodePath("../Play as Cat")
text = "Play as Link"
icon_alignment = 1

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Play as Link")
focus_neighbor_top = NodePath("../Play as Link")
focus_neighbor_right = NodePath("../Play as Cat")
focus_neighbor_bottom = NodePath("../Play as Cat")
focus_next = NodePath("../Play as Cat")
focus_previous = NodePath("../Play as Link")
text = "Back"
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/Play as Cat" to="." method="_on_play_as_cat_pressed"]
[connection signal="pressed" from="VBoxContainer/Play as Link" to="." method="_on_play_as_link_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
